[tool.poetry]
name = "airbnb2307-backend"
version = "0.1.0"
description = ""
authors = ["moonk <mkjoehsb@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb2307_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
